force-app/main/default/objects/CustomObject1__c/fields/CustomerDebitDeadline__c.field-meta.xml
<CustomField>
    <fullName>CustomerDebitDeadline__c</fullName>
    <label>Customer Debit Note Issue Deadline</label>
    <type>Date</type>
</CustomField>