force-app/main/default/objects/CustomObject1__c/fields/CustomerShortName__c.field-meta.xml
<CustomField>
    <fullName>CustomerShortName__c</fullName>
    <formula>Field1__r.CompanyShortName__c</formula>
    <label>Customer Short Name</label>
    <type>Text</type>
</CustomField>