force-app/main/default/objects/CustomObject1__c/fields/CustomizedShipmentOrderID2__c.field-meta.xml
<CustomField>
    <fullName>CustomizedShipmentOrderID2__c</fullName>
    <label>Customized Shipment Order ID-2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>