force-app/main/default/objects/CustomObject1__c/fields/CustomizedShipOrderID__c.field-meta.xml
<CustomField>
    <fullName>CustomizedShipOrderID__c</fullName>
    <label>AMS HBL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>