force-app/main/default/objects/CustomObject1__c/fields/CustomizedShipOrderIDType2__c.field-meta.xml
<CustomField>
    <fullName>CustomizedShipOrderIDType2__c</fullName>
    <label>Customized Shipment Order ID Type-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomizedOrderIDType</valueSetName>
    </valueSet>
</CustomField>