force-app/main/default/objects/CustomObject1__c/fields/CustomizedShipOrderIDType__c.field-meta.xml
<CustomField>
    <fullName>CustomizedShipOrderIDType__c</fullName>
    <label>CUSTOMIZED SHIPMENT ORDER ID TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomizedOrderIDType</valueSetName>
    </valueSet>
</CustomField>