force-app/main/default/objects/CustomObject1__c/fields/CustomsClearanceDeclarationNo__c.field-meta.xml
<CustomField>
    <fullName>CustomsClearanceDeclarationNo__c</fullName>
    <label>CUSTOMS CLEARANCE  DECLARATION NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>