force-app/main/default/objects/CustomObject1__c/fields/CustomsReleaseDay__c.field-meta.xml
<CustomField>
    <fullName>CustomsReleaseDay__c</fullName>
    <label>CUSTOMS CLEARANCE PERMIT DATE</label>
    <type>Date</type>
</CustomField>