force-app/main/default/objects/CustomObject1__c/fields/CutDay__c.field-meta.xml
<CustomField>
    <fullName>CutDay__c</fullName>
    <label>CUT</label>
    <type>Date</type>
</CustomField>