force-app/main/default/objects/CustomObject1__c/fields/D_O_LINK__c.field-meta.xml
<CustomField>
    <fullName>D_O_LINK__c</fullName>
    <inlineHelpText>Paste the link for D/O generated in &apos;Content Deliveries&apos;. Also paste the password from Content Deliveries into &apos;D/O Password&apos;</inlineHelpText>
    <label>D/O LINK</label>
    <type>Url</type>
</CustomField>