force-app/main/default/objects/CustomObject1__c/fields/D_O_PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>D_O_PASSWORD__c</fullName>
    <label>SHIPPER&apos;S ADDRESS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>