force-app/main/default/objects/CustomObject1__c/fields/D_O_type__c.field-meta.xml
<CustomField>
    <fullName>D_O_type__c</fullName>
    <label>D/O Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D/O Original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>