force-app/main/default/objects/CustomObject1__c/fields/Damage_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Damage_Remarks__c</fullName>
    <inlineHelpText>In case of consolidation shipment, if there were any remarks for vanning/devan warehouse, put in this field and it will appear on CLP.</inlineHelpText>
    <label>DAMAGE REMARKS FOR WAREHOUSE(CLP)</label>
    <type>TextArea</type>
</CustomField>