force-app/main/default/objects/CustomObject1__c/fields/DATE_OF_HOUSE_BL_ISSUED__c.field-meta.xml
<CustomField>
    <fullName>DATE_OF_HOUSE_BL_ISSUED__c</fullName>
    <label>DATE OF HOUSE B/L ISSUED</label>
    <type>Date</type>
</CustomField>