force-app/main/default/objects/CustomObject1__c/fields/DateOfSending__c.field-meta.xml
<CustomField>
    <fullName>DateOfSending__c</fullName>
    <label>DATE INVOICE SENT</label>
    <type>Date</type>
</CustomField>