force-app/main/default/objects/CustomObject1__c/fields/DeadlineForPaymentOfExpense__c.field-meta.xml
<CustomField>
    <fullName>DeadlineForPaymentOfExpense__c</fullName>
    <inlineHelpText>Please enter deadline of Duty Payment. The input date will be shown in 立替請求書 Only. Duty Payment includes Import Tax, Export Tax, and costs paid in advance.</inlineHelpText>
    <label>DUE DATE OF DUTY PAYMENT-TAX</label>
    <type>Date</type>
</CustomField>