force-app/main/default/objects/CustomObject1__c/fields/DeadlineForPaymentOfInvoices__c.field-meta.xml
<CustomField>
    <fullName>DeadlineForPaymentOfInvoices__c</fullName>
    <inlineHelpText>Please enter deadline of payment. The input date will be shown in the Invoice.</inlineHelpText>
    <label>DUE DATE OF PAYMENT - EXCLUDE TAX</label>
    <type>Date</type>
</CustomField>