force-app/main/default/objects/CustomObject1__c/fields/DEBIT_CREDIT_LINK__c.field-meta.xml
<CustomField>
    <fullName>DEBIT_CREDIT_LINK__c</fullName>
    <inlineHelpText>Paste the link for Debit/Credit Note generated in &apos;Content Deliveries&apos;. Also paste the password from Content Deliveries into &apos;Debit/Credit Password&apos;</inlineHelpText>
    <label>DEBIT/CREDIT LINK</label>
    <type>Url</type>
</CustomField>