force-app/main/default/objects/CustomObject1__c/fields/DEBIT_CREDIT_PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>DEBIT_CREDIT_PASSWORD__c</fullName>
    <label>DEBIT/CREDIT PASSWORD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>