force-app/main/default/objects/CustomObject1__c/fields/DebitCreditRemark__c.field-meta.xml
<CustomField>
    <fullName>DebitCreditRemark__c</fullName>
    <inlineHelpText>Show in templates with button &apos;Print Dr/Cr Note to Partner/Vendor&apos;</inlineHelpText>
    <label>D/N C/N REMARKS</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>