force-app/main/default/objects/CustomObject1__c/fields/DebitIssuedDeadline__c.field-meta.xml
<CustomField>
    <fullName>DebitIssuedDeadline__c</fullName>
    <label>Debit Issued Deadline</label>
    <type>Date</type>
</CustomField>