force-app/main/default/objects/CustomObject1__c/fields/DebitIssueStatus__c.field-meta.xml
<CustomField>
    <fullName>DebitIssueStatus__c</fullName>
    <label>DEBIT ISSUE STATUS TO PARTNER</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Settlement Required</fullName>
                <default>true</default>
                <label>No Settlement Required</label>
            </value>
            <value>
                <fullName>Not issued Yet-Vendor Invoice not recieved</fullName>
                <label>Not issued yet-Vendor Invoice not received</label>
            </value>
            <value>
                <fullName>On Progress</fullName>
            </value>
            <value>
                <fullName>At Internal Chekcing After Issue</fullName>
                <label>At Internal Checking After Issue</label>
            </value>
            <value>
                <fullName>At Internal Checking Confirmed After Issue</fullName>
            </value>
            <value>
                <fullName>Waiting for Other Debit for Combine After Issue</fullName>
            </value>
            <value>
                <fullName>Copy Sent</fullName>
            </value>
            <value>
                <fullName>Carry Over to Next Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>