force-app/main/default/objects/CustomObject1__c/fields/DebitNote_duedate__c.field-meta.xml
<CustomField>
    <fullName>DebitNote_duedate__c</fullName>
    <inlineHelpText>Please enter deadline Date that you expect your your partner has to pay at the latest. The date will be shown in the Due Date of Debit Note.</inlineHelpText>
    <label>DUE DATE OF DEBIT PAYMENT</label>
    <type>Date</type>
</CustomField>