force-app/main/default/objects/CustomObject1__c/fields/DeliveryAgent__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>DeliveryAgent</relationshipName>
    <type>Lookup</type>
</CustomField>