force-app/main/default/objects/CustomObject1__c/fields/DeliveryAgentCompanyName__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAgentCompanyName__c</fullName>
    <formula>DeliveryAgent__r.EnglishCompanyName__c 
&amp; BR() &amp; 
DeliveryAgent__r.EnglishAddress__c
&amp; BR() &amp;&quot; TEL: &quot;&amp; DeliveryAgent__r.Phone 
&amp; BR() &amp;&quot; FAX: &quot;&amp; DeliveryAgent__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DELIVERY AGENT COMPANY DETAIL</label>
    <type>Text</type>
</CustomField>