force-app/main/default/objects/CustomObject1__c/fields/Devan__c.field-meta.xml
<CustomField>
    <fullName>Devan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>When it&apos;s import consolidation cargo, input the name of the company responsible for devanning</inlineHelpText>
    <label>DEVAN OPERATION COMPANY</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Devan</relationshipName>
    <type>Lookup</type>
</CustomField>