force-app/main/default/objects/CustomObject1__c/fields/DevanningDate__c.field-meta.xml
<CustomField>
    <fullName>DevanningDate__c</fullName>
    <label>DEVAN DATE</label>
    <type>Date</type>
</CustomField>