force-app/main/default/objects/CustomObject1__c/fields/DO_NO__c.field-meta.xml
<CustomField>
    <fullName>DO_NO__c</fullName>
    <label>D/O NO</label>
    <length>12</length>
    <type>Text</type>
</CustomField>