force-app/main/default/objects/CustomObject1__c/fields/DOCUMENT_CLOSING_TIME__c.field-meta.xml
<CustomField>
    <fullName>DOCUMENT_CLOSING_TIME__c</fullName>
    <inlineHelpText>Deadline for Export Document from Client</inlineHelpText>
    <label>DOCUMENT CLOSING TIME</label>
    <type>DateTime</type>
</CustomField>