force-app/main/default/objects/CustomObject1__c/fields/Duty__c.field-meta.xml
<CustomField>
    <fullName>Duty__c</fullName>
    <label>CUSTOMS DUTY</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>