force-app/main/default/objects/CustomObject1__c/fields/DUTY_SELLING_FOR_ADVANCE_PAYMENT_LOCAL__c.field-meta.xml
<CustomField>
    <fullName>DUTY_SELLING_FOR_ADVANCE_PAYMENT_LOCAL__c</fullName>
    <label>DUTY SELLING FOR ADVANCE PAYMENT(LOCAL)</label>
    <summarizedField>AnkenMeisai__c.SellInTaxAmountJPY__c</summarizedField>
    <summaryFilterItems>
        <field>AnkenMeisai__c.Selling_Tatekae__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>AnkenMeisai__c.Anken__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>