force-app/main/default/objects/CustomObject1__c/fields/EBooking__c.field-meta.xml
<CustomField>
    <fullName>EBooking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>E-Booking</label>
    <referenceTo>EBooking__c</referenceTo>
    <relationshipLabel>FMS/TMS/SMS S/O</relationshipLabel>
    <relationshipName>FTMSSO</relationshipName>
    <type>Lookup</type>
</CustomField>