force-app/main/default/objects/CustomObject1__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <label>ETA</label>
    <type>Date</type>
</CustomField>