force-app/main/default/objects/CustomObject1__c/fields/ETAAtTransitPort__c.field-meta.xml
<CustomField>
    <fullName>ETAAtTransitPort__c</fullName>
    <inlineHelpText>Input the ETA at Transit Port. If there is multiple transit, choose the number in Multi Transit Required and same number of Transit record will be created. ETA at Transit Port in final Transit record will be automatically inserted in this field.</inlineHelpText>
    <label>ETA AT TRANSIT PORT</label>
    <type>Date</type>
</CustomField>