force-app/main/default/objects/CustomObject1__c/fields/Exchange_Currency__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Currency__c</fullName>
    <label>Exchange Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>