force-app/main/default/objects/CustomObject1__c/fields/ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRate__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Selling Ex-rate for customer. If Default Invoice Issued Date(Default ‘Today’) is in the period of active EX-Rate Mgmt record, ex-rate is automatically synchronized. Default Invoice Issued Date can be updated from Fixed Invoice Issue Date(If Fixed).</inlineHelpText>
    <label>EXCHANGE RATE FOR SELLING</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>