force-app/main/default/objects/CustomObject1__c/fields/ExpanseCondition__c.field-meta.xml
<CustomField>
    <fullName>ExpanseCondition__c</fullName>
    <label>PAYMENT CONDITION - EXCLUDE TAX</label>
    <length>30</length>
    <type>Text</type>
</CustomField>