force-app/main/default/objects/CustomObject1__c/fields/ExpensePaid__c.field-meta.xml
<CustomField>
    <fullName>ExpensePaid__c</fullName>
    <label>AMOUNT OF DUTY PAID-TAX</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>