force-app/main/default/objects/CustomObject1__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <label>VALID TO</label>
    <type>DateTime</type>
</CustomField>