force-app/main/default/objects/CustomObject1__c/fields/Filing_Time__c.field-meta.xml
<CustomField>
    <fullName>Filing_Time__c</fullName>
    <label>JP24H ADVANCED FILING TIME</label>
    <type>DateTime</type>
</CustomField>