force-app/main/default/objects/CustomObject1__c/fields/FinalDestination__c.field-meta.xml
<CustomField>
    <fullName>FinalDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Destination</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipName>FTMSSOFinalDestination</relationshipName>
    <type>Lookup</type>
</CustomField>