force-app/main/default/objects/CustomObject1__c/fields/FirstReceptionDate__c.field-meta.xml
<CustomField>
    <fullName>FirstReceptionDate__c</fullName>
    <label>INITIAL CONTACT TIME</label>
    <type>DateTime</type>
</CustomField>