force-app/main/default/objects/CustomObject1__c/fields/FlgCopy__c.field-meta.xml
<CustomField>
    <fullName>FlgCopy__c</fullName>
    <label>COPY FLAG</label>
    <length>10</length>
    <type>Text</type>
</CustomField>