force-app/main/default/objects/CustomObject1__c/fields/FlightNo__c.field-meta.xml
<CustomField>
    <fullName>FlightNo__c</fullName>
    <label>Flight No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>