force-app/main/default/objects/CustomObject1__c/fields/FormattedCargoClosingTime__c.field-meta.xml
<CustomField>
    <fullName>FormattedCargoClosingTime__c</fullName>
    <formula>IF( ISBLANK(  CARGO_CLOSING_TIME__c  ), &apos;&apos;, 
TEXT(DAY( DATEVALUE(CARGO_CLOSING_TIME__c ))) + &apos;-&apos;+ CASE( MONTH(DATEVALUE( CARGO_CLOSING_TIME__c )) , 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;) + &apos;-&apos; + RIGHT(TEXT(YEAR(DATEVALUE( CARGO_CLOSING_TIME__c ))), 2)
+  &apos; &apos; + TEXT(TIMEVALUE(CARGO_CLOSING_TIME__c))  
)</formula>
    <label>Formatted Cargo Closing Time</label>
    <type>Text</type>
</CustomField>