force-app/main/default/objects/CustomObject1__c/fields/Fowarding__c.field-meta.xml
<CustomField>
    <fullName>Fowarding__c</fullName>
    <inlineHelpText>Choose &apos;Forwarding by us&apos; if your company is responsible for forwarding. Otherwise, choose &apos;Forwarding by others&apos;</inlineHelpText>
    <label>FORWARDING SERVICE PROVIDER</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>自社フォワーディング(Forwarding by us)</fullName>
                <default>true</default>
                <label>自社フォワーディング(Forwarding by us)</label>
            </value>
            <value>
                <fullName>他社フォワーディング(Forwarding by others)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>