force-app/main/default/objects/CustomObject1__c/fields/FreeDemurrageTime__c.field-meta.xml
<CustomField>
    <fullName>FreeDemurrageTime__c</fullName>
    <inlineHelpText>Free demurrage means a cargo can be placed on CY or CFS for free of charge</inlineHelpText>
    <label>FREE DEMURRAGE TIME</label>
    <type>Date</type>
</CustomField>