force-app/main/default/objects/CustomObject1__c/fields/FreeDetentionTime__c.field-meta.xml
<CustomField>
    <fullName>FreeDetentionTime__c</fullName>
    <inlineHelpText>Free detention means container can be kept by consignee for free after pickup.</inlineHelpText>
    <label>FREE DETENTION TIME</label>
    <type>Date</type>
</CustomField>