force-app/main/default/objects/CustomObject1__c/fields/FREIGHT_MEMO_LINK__c.field-meta.xml
<CustomField>
    <fullName>FREIGHT_MEMO_LINK__c</fullName>
    <inlineHelpText>Paste the link for Freight Memo generated in &apos;Content Deliveries&apos;. Also paste the password from Content Deliveries into &apos;Freight Memopassword&apos;</inlineHelpText>
    <label>FREIGHT MEMO LINK</label>
    <type>Url</type>
</CustomField>