force-app/main/default/objects/CustomObject1__c/fields/FREIGHT_MEMO_PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>FREIGHT_MEMO_PASSWORD__c</fullName>
    <label>FREIGHT MEMO PASSWORD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>