force-app/main/default/objects/CustomObject1__c/fields/FUMIGATION_STATUS__c.field-meta.xml
<CustomField>
    <fullName>FUMIGATION_STATUS__c</fullName>
    <label>FUMIGATION</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UnitType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>燻蒸確認済み</fullName>
            </value>
            <value>
                <fullName>燻蒸不要 : プラスチック製</fullName>
            </value>
            <value>
                <fullName>未処理</fullName>
            </value>
            <value>
                <fullName>搬入時廃棄</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>