force-app/main/default/objects/CustomObject1__c/fields/FumigationServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>FumigationServiceRequired__c</fullName>
    <label>Fumigation Service Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>