force-app/main/default/objects/CustomObject1__c/fields/GMTGap__c.field-meta.xml
<CustomField>
    <fullName>GMTGap__c</fullName>
    <inlineHelpText>Tokyo +0900(Tokyo is 9 Hour ahead from GMT)
Ho Chi Minh +0700(Vietnam is 7 Hour ahead from GMT)
New York -0500(New York is 5 Hour behind from GMT)</inlineHelpText>
    <label>Greenwich Mean Time Gap</label>
    <length>5</length>
    <type>Text</type>
</CustomField>