force-app/main/default/objects/CustomObject1__c/fields/GOODS_ATTACHMENT__c.field-meta.xml
<CustomField>
    <fullName>GOODS_ATTACHMENT__c</fullName>
    <label>GOODS ATTACHMENT</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>