force-app/main/default/objects/CustomObject1__c/fields/GoodsDescriptiononAN__c.field-meta.xml
<CustomField>
    <fullName>GoodsDescriptiononAN__c</fullName>
    <defaultValue>&quot;AS PER BILL&quot;</defaultValue>
    <label>Goods Description on AN</label>
    <type>TextArea</type>
</CustomField>