force-app/main/default/objects/CustomObject1__c/fields/Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight__c</fullName>
    <label>Gross Weight</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>