force-app/main/default/objects/CustomObject1__c/fields/Gross_Weight_RTON__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight_RTON__c</fullName>
    <formula>IF( ISBLANK( weight__c ) , 0, weight__c/1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross_Weight_RTON</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>