force-app/main/default/objects/CustomObject1__c/fields/GrossWeight__c.field-meta.xml
<CustomField>
    <fullName>GrossWeight__c</fullName>
    <deprecated>true</deprecated>
    <label>Gross Weight</label>
    <type>TextArea</type>
</CustomField>