force-app/main/default/objects/CustomObject1__c/fields/GrossWeightUnit__c.field-meta.xml
<CustomField>
    <fullName>GrossWeightUnit__c</fullName>
    <label>Gross Weight Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GrossWeightUnit</valueSetName>
    </valueSet>
</CustomField>