force-app/main/default/objects/CustomObject1__c/fields/HAWB__c.field-meta.xml
<CustomField>
    <fullName>HAWB__c</fullName>
    <label>HAWB No.</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>