force-app/main/default/objects/CustomObject1__c/fields/HBL__c.field-meta.xml
<CustomField>
    <fullName>HBL__c</fullName>
    <label>H B/L NUMBER</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>