force-app/main/default/objects/CustomObject1__c/fields/HBL_Number_SEA_AIR__c.field-meta.xml
<CustomField>
    <fullName>HBL_Number_SEA_AIR__c</fullName>
    <formula>IF ( ISNULL(HBL__c) || ISBLANK(HBL__c) ,  HAWB__c , HBL__c)</formula>
    <label>HBL Number（SEAorAIR）</label>
    <type>Text</type>
</CustomField>